--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -29,147 +29,166 @@ permissions:
   # pull-requests: write
 
 jobs: 
-  terraform-plan:
-    runs-on: ubuntu-latest
-    env:
-      #this is needed since we are running terraform with read-only permissions
-      ARM_SKIP_PROVIDER_REGISTRATION: true
-    outputs:
-      tfplanExitCode: ${{ steps.plan.outputs.exitcode }}
+  # terraform-plan:
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     #this is needed since we are running terraform with read-only permissions
+  #     ARM_SKIP_PROVIDER_REGISTRATION: true
+  #   outputs:
+  #     tfplanExitCode: ${{ steps.plan.outputs.exitcode }}
 
-    steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v6
+  #   steps:
+  #   # Checkout the repository to the GitHub Actions runner
+  #   - name: Checkout
+  #     uses: actions/checkout@v6
 
-    # Install the latest version of Terraform CLI 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_version: $TF_VERSION
-        terraform_wrapper: false
+  #   # Install the latest version of Terraform CLI 
+  #   - name: Setup Terraform
+  #     uses: hashicorp/setup-terraform@v3
+  #     with:
+  #       terraform_version: $TF_VERSION
+  #       terraform_wrapper: false
       
-    # Log into Azure with OIDC integration
-    - name: 'Az CLI login'
-      uses: azure/login@v2
-      with:
-        client-id: ${{ env.ARM_CLIENT_ID }}
-        tenant-id: ${{ env.ARM_TENANT_ID }}
-        subscription-id: ${{ env.ARM_SUBSCRIPTION_ID }}
+  #   # Log into Azure with OIDC integration
+  #   - name: 'Az CLI login'
+  #     uses: azure/login@v2
+  #     with:
+  #       client-id: ${{ env.ARM_CLIENT_ID }}
+  #       tenant-id: ${{ env.ARM_TENANT_ID }}
+  #       subscription-id: ${{ env.ARM_SUBSCRIPTION_ID }}
 
-    # Run az commands to confirm sub access
-    - name: 'Run az commands'
-      run: |
-        az account show
+  #   # Run az commands to confirm sub access
+  #   - name: 'Run az commands'
+  #     run: |
+  #       az account show
 
-    # Run Terraform init
-    - name: Terraform Init
-      run: terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT" -backend-config="container_name=$CONTAINER_NAME" -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
+  #   # Run Terraform init
+  #   - name: Terraform Init
+  #     run: terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT" -backend-config="container_name=$CONTAINER_NAME" -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
 
-    # Run a Terraform fmt
-    - name: Terraform format
-      id: fmt
-      run: terraform fmt -check -recursive
+  #   # Run a Terraform fmt
+  #   - name: Terraform format
+  #     id: fmt
+  #     run: terraform fmt -check -recursive
 
-    # Run a Terraform validate
-    - name: Terraform validate
-      run: terraform validate -no-color
+  #   # Run a Terraform validate
+  #   - name: Terraform validate
+  #     run: terraform validate -no-color
 
-    # Generates an execution plan for Terraform
-    # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
-    - name: Terraform Plan
-      id: plan
-      run: |
-        export exitcode=0
-        terraform plan -detailed-exitcode -no-color -out tfplan || export exitcode=$?
+  #   # Generates an execution plan for Terraform
+  #   # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
+  #   - name: Terraform Plan
+  #     id: plan
+  #     run: |
+  #       export exitcode=0
+  #       terraform plan -detailed-exitcode -no-color -out tfplan || export exitcode=$?
 
-        echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
+  #       echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
         
-        if [ $exitcode -eq 1 ]; then
-          echo Terraform Plan Failed!
-          exit 1
-        else 
-          exit 0
-        fi
+  #       if [ $exitcode -eq 1 ]; then
+  #         echo Terraform Plan Failed!
+  #         exit 1
+  #       else 
+  #         exit 0
+  #       fi
         
-    # Save plan to artifacts  
-    - name: Publish Terraform Plan
-      uses: actions/upload-artifact@v6
-      with:
-        name: tfplan
-        path: tfplan
+  #   # Save plan to artifacts  
+  #   - name: Publish Terraform Plan
+  #     uses: actions/upload-artifact@v6
+  #     with:
+  #       name: tfplan
+  #       path: tfplan
     
-      # Create string output of Terraform Plan
-    - name: Create String Output
-      id: tf-plan-string
-      run: |
-        TERRAFORM_PLAN=$(terraform show -no-color tfplan)
+  #     # Create string output of Terraform Plan
+  #   - name: Create String Output
+  #     id: tf-plan-string
+  #     run: |
+  #       TERRAFORM_PLAN=$(terraform show -no-color tfplan)
         
-        delimiter="$(openssl rand -hex 8)"
-        echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
-        echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
-        echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
-        echo "" >> $GITHUB_OUTPUT
-        echo '```terraform' >> $GITHUB_OUTPUT
-        echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
-        echo '```' >> $GITHUB_OUTPUT
-        echo "</details>" >> $GITHUB_OUTPUT
-        echo "${delimiter}" >> $GITHUB_OUTPUT
+  #       delimiter="$(openssl rand -hex 8)"
+  #       echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
+  #       echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
+  #       echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
+  #       echo "" >> $GITHUB_OUTPUT
+  #       echo '```terraform' >> $GITHUB_OUTPUT
+  #       echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
+  #       echo '```' >> $GITHUB_OUTPUT
+  #       echo "</details>" >> $GITHUB_OUTPUT
+  #       echo "${delimiter}" >> $GITHUB_OUTPUT
 
-    # Publish Terraform Plan as task summary
-    - name: Publish Terraform Plan to Task Summary
-      env:
-        SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
-      run: |
-        echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
+  #   # Publish Terraform Plan as task summary
+  #   - name: Publish Terraform Plan to Task Summary
+  #     env:
+  #       SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
+  #     run: |
+  #       echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
     
-    # # If this is a PR post the changes
-    # - name: Push Terraform Output to PR
-    #   if: github.ref != 'refs/heads/main'
-    #   uses: actions/github-script@v7
-    #   env:
-    #     SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
-    #   with:
-    #       github-token: ${{ secrets.GITHUB_TOKEN }}
-    #       script: |
-    #         const body = `${process.env.SUMMARY}`;
-    #         github.rest.issues.createComment({
-    #             issue_number: context.issue.number,
-    #             owner: context.repo.owner,
-    #             repo: context.repo.repo,
-    #             body: body
-    #         })
+  #   # # If this is a PR post the changes
+  #   # - name: Push Terraform Output to PR
+  #   #   if: github.ref != 'refs/heads/main'
+  #   #   uses: actions/github-script@v7
+  #   #   env:
+  #   #     SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
+  #   #   with:
+  #   #       github-token: ${{ secrets.GITHUB_TOKEN }}
+  #   #       script: |
+  #   #         const body = `${process.env.SUMMARY}`;
+  #   #         github.rest.issues.createComment({
+  #   #             issue_number: context.issue.number,
+  #   #             owner: context.repo.owner,
+  #   #             repo: context.repo.repo,
+  #   #             body: body
+  #   #         })
 
-  manual-approval:
-    name: Manual Approval
-    runs-on: ubuntu-latest
-    needs: terraform-plan
-    if: success() # Only proceed if terraform-plan job succeeds
+  # manual-approval:
+  #   name: Manual Approval
+  #   runs-on: ubuntu-latest
+  #   needs: terraform-plan
+  #   if: success() # Only proceed if terraform-plan job succeeds
     
-    permissions:
-      issues: write
+  #   permissions:
+  #     issues: write
 
-    steps:
-      - name: Await Manual Approval
-        uses: trstringer/manual-approval@v1
-        with:
-          secret: ${{ github.TOKEN }}
-          approvers: smarbar # Replace with GitHub usernames, with the free version you can only have an issue assigned to one username
-          minimum-approvals: 1
-          issue-title: "Manual Approval Required for Terraform Apply"
-          issue-body: "Please approve or deny the deployment."
+  #   steps:
+  #     - name: Await Manual Approval
+  #       uses: trstringer/manual-approval@v1
+  #       with:
+  #         secret: ${{ github.TOKEN }}
+  #         approvers: smarbar # Replace with GitHub usernames, with the free version you can only have an issue assigned to one username
+  #         minimum-approvals: 1
+  #         issue-title: "Manual Approval Required for Terraform Apply"
+  #         issue-body: "Please approve or deny the deployment."
       
   terraform-apply:
     name: 'Terraform Apply'
-    if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
+    # if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
     runs-on: ubuntu-latest
-    needs: [terraform-plan, manual-approval]
+    # needs: [terraform-plan, manual-approval]
     
     steps:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v6
 
+    - name: Get run ID of "Pull Request" workflow
+      id: get-run-id
+      run: |
+        OTHER_REPO="${{ github.repository }}"
+        WF_NAME="Pull Request"
+        RUN_ID=`gh run --repo ${OTHER_REPO} list --workflow ${WF_NAME} --json databaseId --jq .[0].databaseId`
+        echo "Detected latest run id of ${RUN_ID} for workflow ${WF_NAME}"
+        echo "run-id=${RUN_ID}" >> "$GITHUB_OUTPUT"
+      env:
+        GH_TOKEN: ${{ github.token }}
+
+    - name: Download artifact from "Pull Request" workflow
+      uses: actions/download-artifact@v6
+      with:
+        name: tfplan # Match name used in test.yml upload artifact step
+        github-token: ${{ github.token }}
+        repository: ${{ github.repository }}
+        run-id: ${{ steps.get-run-id.outputs.run-id }}
+    
     # Install the latest version of Terraform CLI 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
@@ -194,11 +213,11 @@ jobs:
     - name: Terraform Init
       run: terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT" -backend-config="container_name=$CONTAINER_NAME" -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
 
-    # Download saved plan from artifacts  
-    - name: Download Terraform Plan
-      uses: actions/download-artifact@v6
-      with:
-        name: tfplan
+    # # Download saved plan from artifacts  
+    # - name: Download Terraform Plan
+    #   uses: actions/download-artifact@v6
+    #   with:
+    #     name: tfplan
 
     # Terraform Apply
     - name: Terraform Apply
