--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -90,6 +90,7 @@ jobs:
       # if: success() || failure()
       with:
         sarif_file: checkov-terraform-results.sarif
+        category: 'Checkov Terraform Scan'
 
     # - name: Security Scan - Checkov
     #   run: checkov -d . --framework terraform --output cli --skip-check CKV_AZURE_50
@@ -113,3 +114,4 @@ jobs:
       continue-on-error: true
       with:
         sarif_file: 'trivy-terraform-results.sarif'
+        category: 'Trivy Terraform Scan'
