--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,8 +2,8 @@ name: Push
 
 on:
   push:
-    branches-ignore:
-    - main
+    #branches-ignore:
+    #- main
     paths-ignore:
     - '**/.github/workflows/**'
     - '**/.devcontainer/**'
