--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -6,11 +6,11 @@
 name: checkov
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ "main" ]
+  # push:
+  #   branches: [ "main" ]
+  # pull_request:
+  #   # The branches below must be a subset of the branches above
+  #   branches: [ "main" ]
   workflow_dispatch:
   schedule:
     - cron: '36 0 * * 2'
